# local-deep-research

./: .cursorrules.template  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  LocalStorage.py  MANIFEST.in  README.md  READMECHANGES.md  SECURITY.md  app.py  citation_handler.py  config.py  debug_pytest.py  deepResearchModel.py  docker-compose.yml  fix_indentation.py  full_duck_duck_go_search_results.py  full_serp_search_results.py  kill_servers.py  license.md  main.py  pyproject.toml  report_generator.py  requirements.txt  run_sim_benchmarks.sh  run_strategy_benchmark.sh  run_tests.py  search_system.py  temp_js_check.js  temp_js_check_fixed.js  temp_js_final_check.js  temp_js_high_cost_check.js  temp_js_neutral_check.js  test_simple_cost.js  utilities.py
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  sync-config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: first_time_contributor.md  pull_request_template.md
.github/workflows/: api-tests.yml  auto-merge-sync.yml  codeql.yml  docker-publish.yml  enhanced-tests.yml  file-whitelist-check.yml  infrastructure-tests.yml  llm-tests.yml  pre-commit.yml  publish.yml  release.yml  sync-main-to-dev.yml  tests.yml  ui-tests.yml  version_check.yml
community_benchmark_results/: COMMON_ISSUES.md  README.md  benchmark_template.yaml
cookiecutter-docker/: cookiecutter.json
cookiecutter-docker/hooks/: post_gen_project.py  pre_prompt.py
cookiecutter-docker/{{cookiecutter.config_name}}/: docker-compose.{{cookiecutter.config_name}}.yml  ollama_entrypoint.sh
data/config/: .secrets.toml  llm_config.py
docs/: BENCHMARKING.md  CUSTOM_LLM_INTEGRATION.md  LANGCHAIN_RETRIEVER_INTEGRATION.md  PR-SUMMARY.md  RELEASE_GUIDE.md  SearXNG-Setup.md  analytics-dashboard.md  api-quickstart.md  developing.md  docker-compose-guide.md  docker-usage-readme.md  elasticsearch_search_engine.md  env_configuration.md  faq.md  features.md  ollama-url-parsing-fix.md  search-engines.md
docs/release_notes/: 0.2.0.md  0.4.0.md
docs/security/: CODEQL_GUIDE.md  analyze_sarif.ps1  analyze_sarif.sh
examples/: 2008-finicial-crisis.md  detailed_report_how_to_improve_retrieval_augmented_generation_in_p.md  elasticsearch_search_example.py  example_browsecomp.py  fusion-energy-research-developments.md  medical_topic.md  programmatic_access.ipynb  run_benchmark.py  traditional-spice-trade-routes.md
examples/api_usage/: README.md
examples/benchmarks/: README.md  browsecomp_benchmark_readme.md  run_browsecomp.py  run_gemini_benchmark.py  run_resumable_parallel_benchmark.py  run_simpleqa.py
examples/llm_integration/: README.md  advanced_custom_llm.py  basic_custom_llm.py  mock_llm_example.py
examples/optimization/: README.md  browsecomp_optimization.py  example_multi_benchmark.py  example_optimization.py  example_quick_optimization.py  gemini_optimization.py  llm_multi_benchmark.py  multi_benchmark_simulation.py  multi_benchmark_speed_demo.py  run_gemini_benchmark.py  run_multi_benchmark.py  run_optimization.py  run_parallel_benchmark.py  strategy_benchmark_plan.py  update_llm_config.py
installers/windows/: build_installer.bat  install_packages.bat  launch_cli.bat  launch_web.bat  ldr_setup.iss
scripts/dev/: kill_servers.py
src/: analyze_sarif.ps1  benchmark-simple-qa.py  benchmark_browser_comp.py
src/local_deep_research/: __init__.py  __main__.py  app.py  citation_handler.py  config.py  config.py.bak  config.py__old  config_manager.py  local_collections.py  main.py  migrate_db.py  model_loader.py  report_generator.py  search_system.py  setup_data_dir.py  test_migration.py
src/temp_test/: test_project.py
static/css/: styles.css
static/js/: app.js
static/sounds/: README.md
templates/: index.html
tests/: CI_INTEGRATION.md  README.md  TESTING_COMPARISON.md  TESTING_PROPOSAL.md  TEST_OPTIMIZATION.md  conftest.py  debug_url_utils.py  download_stuff_for_local.py  download_stuff_for_local_test.py  mock_fixtures.py  mock_llm_config.py  mock_modules.py  run_all_tests.py  test_ci_config.py  test_citation_handler.py  test_google_pse.py  test_orm_changes.py  test_programatic_access.ipynb  test_rate_limiting.py  test_report_generator.py  test_research_strategy_orm.py  test_search_engines_enhanced.py  test_search_system.py  test_settings_manager.py  test_url_utils.py  test_url_utils_simple.py  test_utils.py  test_wikipedia_url_security.py
tests/accessibility_tests/: README.md  __init__.py  test_accessibility.js  test_accessibility_backend.py
tests/api_tests/: README.md  test_api_basic.py  test_api_pytest.py  test_rest_api.py  test_rest_api_simple.py
tests/feature_tests/: IMPLEMENTATION_GUIDE_241.md  README.md  __init__.py  test_custom_context.py
tests/fix_tests/: README.md  test_duplicate_links_fix.py  test_milestone_logging_fix.py
tests/fixtures/: README.md  search_engine_mocks.py
tests/health_check/: README.md  run_quick_health_check.py  test_endpoints_health.py  test_endpoints_health.sh
tests/infrastructure_tests/: README.md  __init__.py  package.json  test_route_registry.py  test_urls.test.js  test_urls_js.py
tests/rate_limiting/: test_rate_limiting.py
tests/retriever_integration/: __init__.py  conftest.py  test_api_integration.py  test_e2e_basic.py  test_factory_integration.py  test_retriever_registry.py  test_search_engine_retriever.py
tests/search_engines/: test_wikipedia_search.py
tests/searxng/: __init__.py  test_searxng.py  test_searxng_instance.py  test_searxng_integration.py
tests/strategies/: __init__.py  compare_strategies_visual.py  test_adaptive_strategy.py  test_iterative_reasoning.py  test_search_system_iterative.py
tests/test_llm/: __init__.py  run_llm_tests.sh  test_api_llm_integration.py  test_llm_benchmarks.py  test_llm_edge_cases.py  test_llm_integration.py  test_llm_registry.py
utilties/: enums.py  search_utilities.py
web_search_engines/: full_search.py  search_engine_arxiv.py  search_engine_base.py  search_engine_ddg.py  search_engine_factory.py  search_engine_wikipedia.py  search_engines_config.py
(+378 files in other folders)
